--- a/src/app/account-list/account-list.component.html
+++ b/src/app/account-list/account-list.component.html
@@ -1,9 +1,5 @@
 <h2> Account List</h2>
 
-<div *ngFor="let user of users">
-  ID: {{user.id}}, Name: {{user.username}}
-</div>
-
 <table class="table table-striped">
     <thead>
         <tr>
@@ -13,10 +9,10 @@
         </tr>
     </thead>
     <tbody>
-        <!-- <tr *ngfor= "let account of accounts">
+        <tr *ngFor="let account of accounts">
             <td> {{account.firstName}}</td>
             <td> {{account.lastName}}</td>
             <td> {{account.email}}</td>
-        </tr> -->
+        </tr>
     </tbody>
 </table>
