Integrate the API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <h1 class="text-center"> {{title}} </h1>
-<app-account-list></app-account-list>
+<div class = "container">
+    <router-outlet></router-outlet>
+</div>
