Add routing link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" routerLink="accounts" routerLinkActive="active">Accounts</a>
+            <a class="nav-link" routerLink="/account-list" routerLinkActive="active">Accounts</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="create-account" routerLinkActive="active">Create Account</a>
+            <a class="nav-link" routerLink="/create-account" routerLinkActive="active" style="cursor: pointer;">Create Account</a>
         </li>
     </ul>
 </nav>
