--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -1,1 +1,21 @@
-<p>create-account works!</p>
+<div class="col-md-6 offset-md-3">
+    <h3>Create Account</h3>
+    <form (ngSubmit)="onSubmit()">
+        <div class="form-group mb-3">
+            <label for="firstName" class="mb-2">First Name</label>
+            <input type="text" class="form-control" id="firstName" name="firstName" [(ngModel)]="account.firstName">
+        </div>
+
+        <div class="form-group mb-3">
+            <label for="lastName" class="mb-2">Last Name</label>
+            <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="account.lastName">
+        </div>
+
+        <div class="form-group mb-3">
+            <label for="email" class="mb-2">Email</label>
+            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="account.email">
+        </div>
+
+        <button class="btn btn-success" type="submit">Submit</button>
+    </form>
+</div>
