--- a/src/app/account-list/account-list.component.html
+++ b/src/app/account-list/account-list.component.html
@@ -6,6 +6,8 @@
             <th> First Name</th>
             <th> Last Name</th>
             <th> Email</th>
+            <th> Balance</th>
+            <th> Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -13,6 +15,10 @@
             <td> {{account.firstName}}</td>
             <td> {{account.lastName}}</td>
             <td> {{account.email}}</td>
+            <td> {{account.balance | currency}}</td>
+            <td>
+                <button class="btn btn-info" (click)="updateAccount(account.id)"> Update</button>
+            </td>
         </tr>
     </tbody>
 </table>
