--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,6 @@
 
 <footer class="footer">
     <div class="container">
-        <span>All Rights Reserved 2024 Banking System</span>
+        <span>All Rights Reserved 2024 Banking Application </span>
     </div>
 </footer>
