Add validation update and create

--- a/src/app/account-details/account-details.component.html
+++ b/src/app/account-details/account-details.component.html
@@ -10,6 +10,18 @@
         <label> <b> Email:</b> </label> {{account.email}}
     </div>
     <div>
+        <label> <b> Username:</b> </label> {{account.username}}
+    </div>
+    <div>
+        <label> <b> City:</b> </label> {{account.city}}
+    </div>
+    <div>
+        <label> <b> State:</b> </label> {{account.state}}
+    </div>
+    <div>
+        <label> <b> Zip:</b> </label> {{account.zip}}
+    </div>
+    <div>
         <label> <b> Balance:</b> </label> {{account.balance | currency}}
     </div>
 </div>
