--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/account-list" routerLinkActive="active">Accounts</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/create-account" routerLinkActive="active" style="cursor: pointer;">Create Account</a>
-        </li>
-    </ul>
+<nav class="navbar navbar-expand-lg bg-primary">
+    <div class="container-fluid">
+        <h1>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a style="color: white; font-size: 24px;" class="nav-link" routerLink="/account-list" routerLinkActive="active">Bank Management Application</a>
+                </li>
+            </ul>
+        </h1>
+            <div>
+                <button class="btn btn-secondary" routerLink="/create-account" routerLinkActive="active">Create Account</button>
+            </div>
+    </div>
 </nav>
 
 <h1 class="text-center"> {{title}} </h1>
