--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -87,7 +87,8 @@
         </div>
 
         <div class="d-flex justify-content-end">
-            <button class="btn btn-success" type="button" (click)="onSubmit()">Submit Form</button>
+            <button class="btn btn-success me-2" type="button" (click)="onSubmit()">Submit Form</button>
+            <button class="btn btn-secondary" type="button" (click)="goToAccountList()">Cancel</button>
         </div>
     </form>
 </div>
