--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,16 @@
         <h1>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a style="color: white; font-size: 24px;" class="nav-link" routerLink="/account-list" routerLinkActive="active">Bank Management Application</a>
+                    <a style="color: white; font-size: 24px;" class="nav-link" routerLink="/account-list"
+                        routerLinkActive="active">Bank Management Application</a>
                 </li>
             </ul>
         </h1>
-            <div>
-                <button class="btn btn-secondary" routerLink="/create-account" routerLinkActive="active">Create Account</button>
-            </div>
+        <div>
+            <button class="btn btn-secondary me-2" routerLink="/create-account" routerLinkActive="active">Create
+                Account</button>
+            <button (click)="logout()" class="btn btn-warning" routerLink="/">Logout</button>
+        </div>
     </div>
 </nav>
 
