Updated the Deposit and Withdraw features

--- a/src/app/Component/account-details/account-details.component.html
+++ b/src/app/Component/account-details/account-details.component.html
@@ -37,13 +37,13 @@
 
     <!-- Buttons -->
     <div style="text-align: center; margin-top: 20px;">
-        <button 
-            
+        <button class="btn btn-danger"
+            (click)="onWithdraw()"
             style="padding: 10px 20px; margin-right: 10px; background-color: #f44336; color: white; border: none; border-radius: 5px; cursor: pointer;">
             Withdraw
         </button>
-        <button 
-            
+        <button  class="btn btn-success"
+            (click)="onDeposit()"
             style="padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;">
             Deposit
         </button>
