--- a/src/app/Component/update-account/update-account.component.html
+++ b/src/app/Component/update-account/update-account.component.html
@@ -76,6 +76,11 @@
             </div>
         </div>
 
+        <div class="col-md-4">
+            <label for="balance" class="form-label">Balance</label>
+            <input type="text" class="form-control disabled" id="balance" name="balance" formControlName="balance" [(ngModel)]="account.balance">
+        </div>
+
         <div class="d-flex justify-content-end">
             <button class="btn btn-success me-2" type="button" (click)="onSubmit()">Update</button>
             <button class="btn btn-secondary" type="button" (click)="goToAccountList()">Cancel</button>
