--- a/src/app/Component/account-list/account-list.component.html
+++ b/src/app/Component/account-list/account-list.component.html
@@ -27,7 +27,7 @@
             <td>
                 <button class="btn btn-primary" (click)="accountDetails(account.id)"> View</button>
                 <button class="btn btn-info" style="margin-left: 10px;" (click)="updateAccount(account.id)"> Update</button>
-                <button class="btn btn-danger" style="margin-left: 10px;" (click)="deleteAccount(account.id)"> Delete</button>
+                <button class="btn btn-danger" style="margin-left: 10px;" [disabled]="isButtonDisabled" (click)="deleteAccount(account.id)"> Delete</button>
             </td>
         </tr>
     </tbody>
